23 Apr 2011 Provide initial DIAGNOSE X'F18' README and release Host Resource Access
            Facility - Harold Grovesteen
20 Apr 2011 Fix file opens to open files in non-multi-write-shared mode
            (Windows-only for now; non-Windows yet to be implemented) - Fish
17 Apr 2011 LCS CTCI-WIN v3.3 multi-write mode (faster guest downloads) - Fish
27 Feb 2011 Fix all-zero MAC bug in LCS cmd reply frame handling - Fish
22 Feb 2011 Function logmsg() renamed to log_msg(); LOGMSG define added to simply implementation
21 Feb 2011 Fix CCKD stmt 'comp=' validation bug - Fish
06 Feb 2011 VS2010 Solution File HERCULES_VS2010.SLN
06 Feb 2011 WINDOWS - bootstrap.c change for VS2010 C4748 warning
06 Feb 2011 console.c LUNAME rules for GROUP on 3270 statement
04 Feb 2011 VS2010 support for Windows builds - John P. Baker by Fish
27 Jan 2011 Fix multiple simultaneous tape use CMDREJ issue - Fish
10 Jan 2011 QETH(QDIO) IP Layer 2 support for linux guests - Jan Jaeger / Harold Grovesteen
05 Jan 2011 Fix configure '-g' flag handling for "--enable-debug=yes" - Fish
14 Dec 2010 Enhanced DAT - Jan Jaeger
06 Dec 2010 Improved scsimount functionality (better scaling) - Fish
06 Dec 2010 Dyngui mods: 64-bit MAINSIZE fix, SCD fix, multi-CPU% support - Fish
03 Dec 2010 Build logo in console initialization only if it hasn't already
            been built via HERCLOGO configuration statement - Kevin Leonard
01 Dec 2010 cvslvlck renamed to bldlvlck and corrections made for Apple/Darwin
            - Enrico Sorichetti by Fish (README.CVS also renamed to README.SVN)
01 Dec 2010 Allow //./Tape0 or \\.\Tape0 for Windows device filename - Fish
21 Nov 2010 Corrected DIAGNOSE X'000' to report timezone differential - Harold Grovesteen
28 Oct 2010 MAINSIZE and XPNDSIZE UNLOCKED and LOCKED options - Mark L. Gaubatz
            LOCKED option indicates memory is to be locked into storage while
            UNLOCKED indicates memory is not locked into storage. The default is
            UNLOCKED.
