@@ -1,3 +1,4 @@
+28 May 2011 Fix rare devinit bug and leak in reuse of previous arguments - Fish
 23 Apr 2011 Provide initial DIAGNOSE X'F18' README and release Host Resource Access
             Facility - Harold Grovesteen
 20 Apr 2011 Fix file opens to open files in non-multi-write-shared mode
